edit tests